# hi-paris-movie-challenge

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/notebooks/: eda.ipynb
backend/routers/: analytics.py  movies.py  recommendations.py
backend/services/: embeddings.py  preprocessing.py  projection.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: MovieCard.jsx  MovieDrawer.jsx
frontend/src/pages/: EmbeddingMap.jsx  MovieList.jsx
report/: rapport.md
