[project]
name = "movie-explorer-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "openai>=1.0",
    "chromadb>=0.5",
    "numpy>=1.26",
    "evoc>=0.3.1",
]

[tool.uv]
package = false

[tool.uv.sources]
evoc = { git = "https://github.com/TutteInstitute/evoc" }

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pre-commit>=4.0",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
